# onoma

./: .env.example  .gitignore  README.md  pyproject.toml  test.db
alembic/: env.py
alembic/versions/: cb7403624037_initial.py
api/: .env.example  CLAUDE.md  alembic.ini  test.db
api/alembic/: env.py
api/app/: config.py  main.py
api/app/models/: __init__.py  tenant.py
api/app/routers/: auth.py
api/app/schemas/: tenant.py  trademark.py
api/app/services/: rpi_parser.py  rpi_processor.py
api/docs/bruno/: bruno.json
api/docs/bruno/admin/: backfill-rpi.bru  get-latest-edition.bru  list-rpi-logs.bru  (+1 more)
api/docs/specs/: business-rules.md  rpi-pipeline.md
api/tests/: test_rpi_parser.py
app/: config.py  dependencies.py  main.py
app/models/: trademark.py  user.py
app/routers/: admin.py  tenants.py  trademarks.py
app/schemas/: auth.py
app/services/: auth.py  rpi_processor.py
docs/bruno/admin/: list-rpi-logs.bru  trigger-rpi-latest.bru  trigger-rpi.bru
docs/bruno/auth/: login.bru  register.bru
docs/bruno/environments/: local.bru
docs/bruno/trademarks/: create.bru  delete.bru  get.bru  list.bru
tests/: conftest.py  test_auth.py  test_trademarks.py
ui/: app.html  index.html  package-lock.json  package.json  signup.html
ui/assets/: styles.css
ui/src/app/: globals.scss  layout.jsx  page.jsx  page.module.scss
ui/src/contexts/: AuthContext.jsx  Providers.jsx
ui/src/hooks/: useTenant.js  useTrademarks.js
ui/src/services/: api.js  auth.service.js  tenant.service.js  trademark.service.js
ui/src/styles/: _mixins.scss  _variables.scss
(+52 files in other folders)
